force-app/main/default/objects/Game__c/fields/GameDate__c.field-meta.xml
<CustomField>
    <fullName>GameDate__c</fullName>
    <label>GameDate</label>
    <type>DateTime</type>
</CustomField>