force-app/main/default/objects/Game__c/fields/HomeTeam__c.field-meta.xml
<CustomField>
    <fullName>HomeTeam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HomeTeam</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Games</relationshipLabel>
    <relationshipName>Games</relationshipName>
    <type>Lookup</type>
</CustomField>