force-app/main/default/objects/Game__c/fields/HomeTeamScore__c.field-meta.xml
<CustomField>
    <fullName>HomeTeamScore__c</fullName>
    <label>HomeTeamScore</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>