force-app/main/default/objects/Game__c/fields/PostSeason__c.field-meta.xml
<CustomField>
    <fullName>PostSeason__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PostSeason</label>
    <type>Checkbox</type>
</CustomField>