force-app/main/default/objects/Game__c/fields/VisitorTeam__c.field-meta.xml
<CustomField>
    <fullName>VisitorTeam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VisitorTeam</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Games (VisitorTeam)</relationshipLabel>
    <relationshipName>Games1</relationshipName>
    <type>Lookup</type>
</CustomField>