force-app/main/default/objects/Game__c/fields/VisitorTeamScore__c.field-meta.xml
<CustomField>
    <fullName>VisitorTeamScore__c</fullName>
    <label>VisitorTeamScore</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>